--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:loverfairy@gmail.com
-  facebook:loverfairy@gmail.com
+  email:
+  facebook:
   flickr:
-  github: loverfairy/loverfairy.github.io
+  github: 
   instagram:
   linkedin:
   pinterest:
